[gd_scene load_steps=4 format=3 uid="uid://c76a1fyyoqpjl"]

[ext_resource type="Script" uid="uid://bo47p6gsx1uos" path="res://Scripts/ui/main_menu.gd" id="1_ogv1u"]
[ext_resource type="PackedScene" uid="uid://ush8hr6hjxs5" path="res://Scenes/ui/settings_menu.tscn" id="2_rpp73"]

[sub_resource type="LabelSettings" id="LabelSettings_ogx8p"]
font_size = 60

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ogv1u")

[node name="SettingsMenu" parent="." instance=ExtResource("2_rpp73")]
process_mode = 3
visible = false

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="GameTitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Future Survivors"
label_settings = SubResource("LabelSettings_ogx8p")

[node name="Spacer" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(600, 60)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 30
text = "Play"

[node name="Spacer2" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="SettingsButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(600, 60)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 30
text = "Settings"

[node name="Spacer3" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="ExitButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(600, 60)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 30
text = "Exit"
